--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cyrilnb.github.io/Historicoins",
   "name": "historicoins",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "moment": "^2.22.2",
+    "now": "^11.4.6",
     "pusher": "^2.1.3",
     "pusher-js": "^4.3.1",
     "react": "^16.5.2",
@@ -17,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
@@ -28,5 +32,23 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server.js",
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CyrilNb/HistoriCoins.git"
+  },
+  "keywords": [
+    "bitcoin-prices"
+  ],
+  "author": "Cyril Niobé",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CyrilNb/HistoriCoins/issues"
+  }
+ 
 }
